tests/test_compile/cases/temp_field.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/temp_field.rs:1:1
  |
1 | / use deku::prelude::*;
2 | |
3 | | // wrong way to use temp
4 | | #[derive(DekuRead, DekuWrite)]
... |
7 | |     field_a: u8,
8 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/test_compile/cases/temp_field.rs`

error[E0063]: missing field `field_a` in initializer of `Test1`
 --> $DIR/temp_field.rs:4:10
  |
4 | #[derive(DekuRead, DekuWrite)]
  |          ^^^^^^^^ missing `field_a`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
